       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain
    4. Only table cells and explicit paragraphs are recognized as text blocks


Revision History:
 5-Sep-2005:
    Problems fixed:
        1. bug #1063494 HTML entity replacement was looping indefinitely on strings with '&' and no ';'

 6-Mar-2005 1.6.1
    Acknowledgements:
        Thanks to Hanson Char for identifying a JDK 1.5 incompatibility.
        Thanks to Satish Kolli for fixing bug #1040770
        Thanks to Fabrizio Guistina for supplying an implementation of locale handling for ServletUnitHttpResponse
        Thanks to Vladimir Korenev for providing an implementation for style.visibility, element.tagName, and element.nodeName
        Thanks to Yaqoub Jaiousi for identifying the problem with buttons outside of forms.

    Problems fixed:
        JDK compatibility
             1. bug #1039989 Did not compile with JDK 1.3. This bug was introduced in HttpUnit 1.6 and has now been corrected.
             2. Renamed local variables which conflicted with new JDK 1.5 keyword "enum."

        Content and Parsing
             3. bug #1046597 tables nested inside paragraphs were not being seen by the enclosing page. This bug was introduced
                in 1.6 and has now been corrected.
             4. bug #1074232 buttons outside of forms were only recognized if defined with the <button> tag, not <input>

        Window handling
             5. bug #1035949 Following a link from the top frame to a _parent target no longer results in a NullPointerException.

        JavaScript
             6. bug #1040508 Using the setCheckbox and toggleCheckbox methods was not triggering the onclick event
             7. bug #1040770 the Image.name JavaScript property is now supported