@@ -14,6 +14,13 @@ Limitations:
 
 
 Revision History:
+ 8-Mar-2006:
+    Acknowledgements:
+        Thanks for Fabrizio Giustina for suggesting a way to make the TableRow object publically accessible.
+
+    Additions:
+        1. patch #1413171 Web table rows are now directly accessible in a TableRow element.
+
  5-Sep-2005:
     Problems fixed:
         1. bug #1063494 HTML entity replacement was looping indefinitely on strings with '&' and no ';'
